# TKT20019---Keskustelusovellus

./: .coverage  .gitignore  LICENSE  README.md  admin.py  app.py  db.py  delete_polls.py  like.py  mise.toml  polls.py  prof.py  pyproject.toml  requirements.txt  routes.py  run_robot_tests.sh  schematic.sql  thread.py  threadpost.py  users.py
.github/workflows/: main.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  FAQ.md
src/: db_helper.py  index.py  polls.py  prof.py  profile_routes.py  routes.py  secrets.py  secrets_token.py  user_login.py  user_register.py  users.py
src/auth/: user_login.py  user_register.py  validate_registeration.py
src/polls/: polls_create.py  polls_delete.py  polls_view_answer.py
src/profile/: profile_context.py  profile_routes.py
src/story_tests.py/: valid_registeration.robot
src/templates/: login.html  poll.html  profile.html  register.html
src/templates/components/: makepolls.html
src/threads/: thread_create.py  thread_create_reply.py  thread_like.py  thread_management.py  thread_reply.py  thread_view.py
static/css/: components.css  form.css  style.css  thread.css
templates/: about.html  admin_page.html  edit_thread.html  frontpage.html  login.html  newthread.html  poll.html  polls.html  profile.html  register.html  result.html  view_thread.html
templates/components/: footer.html  makepolls.html  navbar.html  newthread.html
tests/: test_placeholder.py  valid_login.robot  valid_post.robot
