[project]
name = "tkt20019-keskustelusovellus"
version = "0.1.0"
description = ""
authors = [
    {name = "eetu huttula",email = "eetuhuttula99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "blinker (>=1.9.0,<2.0.0)",
    "click (>=8.3.1,<9.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "flask (>=3.1.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "markupsafe (>=3.0.3,<4.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "selenium (>=4.38.0,<5.0.0)",
    "coverage (>=7.11.3,<8.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "robotframework (>=7.3.2,<8.0.0)",
    "robotframework-seleniumlibrary (>=6.1.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
